[gd_scene load_steps=17 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Objects/Circuit/EquivalentResistor.png" type="Texture" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter III/EquivalentResistor/EquivalentResistor.gd" type="Script" id=3]
[ext_resource path="res://Resources/Objects/PuzzleGraphics/Weapon.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="EquivalentResistor" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.4, 0.4, 0.4, 1 )

[node name="Sprite2" type="Sprite" parent="." index="2"]
position = Vector2( 191.447, 83.509 )
scale = Vector2( 0.505, 0.505 )
texture = ExtResource( 4 )

[node name="InstructionLabel" type="Label" parent="." index="3"]
margin_left = 74.2697
margin_top = 33.1235
margin_right = 404.27
margin_bottom = 64.1235
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="4"]
margin_left = 167.754
margin_top = 7.67125
margin_right = 207.754
margin_bottom = 21.6713
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="5"]
position = Vector2( 175.363, 105.928 )
scale = Vector2( 0.32719, 0.32719 )
texture = ExtResource( 2 )

[node name="Series" type="Label" parent="." index="6"]
margin_left = 79.7845
margin_top = 144.036
margin_right = 122.785
margin_bottom = 158.036
rect_scale = Vector2( 0.7, 0.7 )
text = "Series:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Series1" type="LineEdit" parent="Series" index="0"]
margin_left = 2.84399
margin_top = 17.064
margin_right = 60.844
margin_bottom = 41.064
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Series2" type="LineEdit" parent="Series" index="1"]
margin_left = 33.0472
margin_top = 17.064
margin_right = 91.0472
margin_bottom = 41.064
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallel" type="Label" parent="." index="7"]
visible = false
margin_left = 149.65
margin_top = 144.081
margin_right = 200.65
margin_bottom = 158.081
rect_scale = Vector2( 0.7, 0.7 )
text = "Parallel:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallel1" type="LineEdit" parent="Parallel" index="0"]
margin_left = 2.84399
margin_top = 17.064
margin_right = 60.844
margin_bottom = 41.064
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallel2" type="LineEdit" parent="Parallel" index="1"]
margin_left = 33.3142
margin_top = 17.064
margin_right = 91.3142
margin_bottom = 41.064
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/read_only = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="Series/Series1" to="." method="_on_Series1_text_entered"]
[connection signal="text_entered" from="Series/Series2" to="." method="_on_Series2_text_entered"]
[connection signal="text_entered" from="Parallel/Parallel1" to="." method="_on_Parallel1_text_entered"]
[connection signal="text_entered" from="Parallel/Parallel2" to="." method="_on_Parallel2_text_entered"]
